[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Icons/Add.svg" type="Texture" id=1]
[ext_resource path="res://Assets/Icons/Account.svg" type="Texture" id=2]
[ext_resource path="res://Assets/Icons/Folder.svg" type="Texture" id=3]
[ext_resource path="res://Scenes/Dialogs/Channel/ChannelSettings.gd" type="Script" id=4]

[node name="ChannelSettings" type="ConfirmationDialog"]
visible = true
margin_right = 357.0
margin_bottom = 199.0
window_title = "Channel Settings"
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
custom_constants/separation = 16

[node name="ChannelChanger" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 341.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/ChannelChanger"]
margin_right = 160.0
margin_bottom = 42.0
text = "Channel Name"
icon = ExtResource( 2 )

[node name="Centrify" type="CenterContainer" parent="VBoxContainer/ChannelChanger"]
margin_left = 164.0
margin_right = 200.0
margin_bottom = 42.0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/ChannelChanger/Centrify"]
margin_top = 3.0
margin_right = 36.0
margin_bottom = 39.0
texture_normal = ExtResource( 1 )

[node name="Options" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 341.0
margin_bottom = 138.0

[node name="Labels" type="VBoxContainer" parent="VBoxContainer/Options"]
margin_right = 105.0
margin_bottom = 80.0
custom_constants/separation = 20

[node name="ChannelName" type="Label" parent="VBoxContainer/Options/Labels"]
margin_right = 105.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Channel Name:  "
valign = 1

[node name="Icon" type="Label" parent="VBoxContainer/Options/Labels"]
margin_top = 50.0
margin_right = 105.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 30 )
text = "Channel Icon:"
valign = 1

[node name="Inputs" type="VBoxContainer" parent="VBoxContainer/Options"]
margin_left = 109.0
margin_right = 341.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="ChannelName" type="LineEdit" parent="VBoxContainer/Options/Inputs"]
margin_right = 232.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Channel Name"

[node name="IconInput" type="HBoxContainer" parent="VBoxContainer/Options/Inputs"]
margin_top = 44.0
margin_right = 232.0
margin_bottom = 68.0
custom_constants/separation = 9

[node name="Icon" type="LineEdit" parent="VBoxContainer/Options/Inputs/IconInput"]
margin_right = 199.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Channel Icon"

[node name="Centrify" type="CenterContainer" parent="VBoxContainer/Options/Inputs/IconInput"]
margin_left = 208.0
margin_right = 232.0
margin_bottom = 24.0

[node name="PickIcon" type="TextureButton" parent="VBoxContainer/Options/Inputs/IconInput/Centrify"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4

[connection signal="about_to_show" from="." to="." method="_on_ChannelSettings_about_to_show"]
[connection signal="pressed" from="VBoxContainer/Options/Inputs/IconInput/Centrify/PickIcon" to="." method="_on_TextureButton_pressed"]
